fix overflow

--- a/react-port/src/App.css
+++ b/react-port/src/App.css
@@ -174,6 +174,7 @@ div#content {
 }
 
 footer {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   background-color: var(--main-dark-grey);
